objects/Apttus_Base2__UIComponentConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ApplicationName__c</fullName>
        <label>Application Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentConfigId__c</fullName>
        <externalId>true</externalId>
        <label>Component Config Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ComponentName__c</fullName>
        <label>Component Type</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Config__c</fullName>
        <label>Config</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderClassName__c</fullName>
        <label>Class name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__DataProviderPackageName__c</fullName>
        <label>Package name for data provider</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Data Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Base2__UIComponentProvider__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Base2__UIComponentProvider__c</referenceTo>
        <relationshipLabel>Data Provider</relationshipLabel>
        <relationshipName>DataProvider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__TemplateName__c</fullName>
        <label>Template</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Apttus UI Component Configuration</label>
    <listViews>
        <fullName>Apttus_Base2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Base2__ComponentName__c</columns>
        <columns>Apttus_Base2__TemplateName__c</columns>
        <columns>Apttus_Base2__ProviderId__c</columns>
        <columns>Apttus_Base2__DataProviderPackageName__c</columns>
        <columns>Apttus_Base2__DataProviderClassName__c</columns>
        <columns>Apttus_Base2__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Configurations</label>
    </listViews>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus UI Component Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>